--- a/css/styles.css
+++ b/css/styles.css
@@ -84,14 +84,14 @@ mark.green {
 .choropleth_map { grid-area: map; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
 .dotplot {grid-area: dotplot; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
 .description1 { grid-area: description1; 
-	font-family: Arial, Helvetica, sans-serif; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.description2 { grid-area: description2; font-family: Arial, Helvetica, sans-serif;text-align: center;background-color: rgba(255, 255, 255, 0.8);}
+	font-family: Arial, Helvetica, sans-serif; background-color: rgba(255, 255, 255, 0.8);}
+.description2 { grid-area: description2; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
 .isotype_dot { grid-area: isotype_dot; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
 .barchart1 {grid-area: barchart1; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
 .barchart2 {grid-area: barchart2; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.description3 { grid-area: description3; font-family: Arial, Helvetica, sans-serif;text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.description4 { grid-area: description4; font-family: Arial, Helvetica, sans-serif;text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.description5 { grid-area: description5; font-family: Arial, Helvetica, sans-serif;text-align: center;background-color: rgba(255, 255, 255, 0.8);}
+.description3 { grid-area: description3; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
+.description4 { grid-area: description4; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
+.description5 { grid-area: description5; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
 .srHead { grid-area: srHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
 .leHead { grid-area: leHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
 .mcHead { grid-area: mcHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
@@ -104,7 +104,7 @@ mark.green {
 	  'srHead srHead srHead srHead'
 	  'map map description1 description1'
 	  'leHead leHead leHead leHead'
-	  'description4 dotplot dotplot dotplot'
+	  'dotplot dotplot description4 description4'
 	  'mcHead mcHead mcHead mcHead'
 	  'isotype_dot isotype_dot description2 description2'
 	  'srtHead srtHead srtHead srtHead'
@@ -113,7 +113,7 @@ mark.green {
 	  'description5 barchart2 barchart2 barchart2';
 	grid-gap: 10px;
 	padding: 10px;
-	background-color: rgba(189, 182, 245, 0.8);
+
   }
   
 .grid-container > div {
