--- a/css/styles.css
+++ b/css/styles.css
@@ -81,22 +81,22 @@ mark.green {
 }
 
 .head { grid-area: header;font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.choropleth_map { grid-area: map; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.dotplot {grid-area: dotplot; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
+.choropleth_map { grid-area: map;background-color: rgba(255, 255, 255, 0.8);}
+.dotplot {grid-area: dotplot;background-color: rgba(255, 255, 255, 0.8);}
 .description1 { grid-area: description1; 
 	font-family: Arial, Helvetica, sans-serif; background-color: rgba(255, 255, 255, 0.8);}
 .description2 { grid-area: description2; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.isotype_dot { grid-area: isotype_dot; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.barchart1 {grid-area: barchart1; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
-.barchart2 {grid-area: barchart2; text-align: center;background-color: rgba(255, 255, 255, 0.8);}
+.isotype_dot { grid-area: isotype_dot;background-color: rgba(255, 255, 255, 0.8);}
+.barchart1 {grid-area: barchart1; background-color: rgba(255, 255, 255, 0.8);}
+.barchart2 {grid-area: barchart2;background-color: rgba(255, 255, 255, 0.8);}
 .description3 { grid-area: description3; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
 .description4 { grid-area: description4; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
 .description5 { grid-area: description5; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.srHead { grid-area: srHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
-.leHead { grid-area: leHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
-.mcHead { grid-area: mcHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
-.srtHead { grid-area: srtHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
-.pgHead { grid-area: pgHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);text-align: center;}
+.srHead { grid-area: srHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8)}
+.leHead { grid-area: leHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8)}
+.mcHead { grid-area: mcHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
+.srtHead { grid-area: srtHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
+.pgHead { grid-area: pgHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
 .grid-container {
 	display: grid;
 	grid-template:
@@ -117,7 +117,7 @@ mark.green {
   }
   
 .grid-container > div {
-padding: 10px 0;
+padding: 10px 0
 font-size: 30px;
 
 }
