--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ h1 {
 h2 {
 	font-size: 25px;
 	text-align: center;
-	color: blue;
+	color: darkblue;
 }
 
 t {
@@ -62,6 +62,13 @@ t {
 	font-family: Arial, Helvetica, sans-serif;
 	color: darkslateblue;
 }
+
+t1 {
+	font-size: 27px;
+	font-family: Arial, Helvetica, sans-serif;
+	color: darkslateblue;
+}
+
 p1 {
 	font-size: 20px;
 	text-anchor: start;
@@ -81,22 +88,22 @@ mark.green {
 }
 
 .head { grid-area: header;font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.choropleth_map { grid-area: map;background-color: rgba(255, 255, 255, 0.8);}
-.dotplot {grid-area: dotplot;background-color: rgba(255, 255, 255, 0.8);}
+.choropleth_map { grid-area: map;background-color: rgba(255, 255, 255, 0.8);;padding: 10px;}
+.dotplot {grid-area: dotplot;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
 .description1 { grid-area: description1; 
-	font-family: Arial, Helvetica, sans-serif; background-color: rgba(255, 255, 255, 0.8);}
-.description2 { grid-area: description2; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.isotype_dot { grid-area: isotype_dot;background-color: rgba(255, 255, 255, 0.8);}
-.barchart1 {grid-area: barchart1; background-color: rgba(255, 255, 255, 0.8);}
-.barchart2 {grid-area: barchart2;background-color: rgba(255, 255, 255, 0.8);}
-.description3 { grid-area: description3; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.description4 { grid-area: description4; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.description5 { grid-area: description5; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
-.srHead { grid-area: srHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8)}
-.leHead { grid-area: leHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8)}
-.mcHead { grid-area: mcHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
-.srtHead { grid-area: srtHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
-.pgHead { grid-area: pgHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);}
+	font-family: Arial, Helvetica, sans-serif; background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.description2 { grid-area: description2; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.isotype_dot { grid-area: isotype_dot;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.barchart1 {grid-area: barchart1; background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.barchart2 {grid-area: barchart2;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.description3 { grid-area: description3; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.description4 { grid-area: description4; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.description5 { grid-area: description5; font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);padding: 10px;}
+.srHead { grid-area: srHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);padding: 10px;}
+.leHead { grid-area: leHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);padding: 10px;}
+.mcHead { grid-area: mcHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);padding: 10px;}
+.srtHead { grid-area: srtHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);padding: 10px;}
+.pgHead { grid-area: pgHead; font-family: Arial, Helvetica, sans-serif;background-color: rgba(189, 182, 245, 0.8);padding: 10px;}
 .grid-container {
 	display: grid;
 	grid-template:
@@ -117,7 +124,6 @@ mark.green {
   }
   
 .grid-container > div {
-padding: 10px 0
 font-size: 30px;
 
 }
