--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,8 @@ p1 {
 p2 {
 	font-size: 15px;
 }
-mark.red {
-    color:red;
+mark.blue {
+    color:blue;
     background: none;
 	font-weight: bold;
 }
@@ -92,6 +92,7 @@ mark.green {
     background: none;
 	font-weight: bold;
 }
+
 
 .head { grid-area: header;font-family: Arial, Helvetica, sans-serif;background-color: rgba(255, 255, 255, 0.8);}
 .choropleth_map { grid-area: map;background-color: rgba(255, 255, 255, 0.8);;padding: 10px;}
