--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,13 @@ mark.blue {
     color:blue;
     background: none;
 	font-weight: bold;
+	font-size: 110%;
 }
 mark.green {
     color:green;
     background: none;
 	font-weight: bold;
+	font-size: 110%;
 }
 
 
